feat: add documentation to org routes
